--- a/test-utils/Cargo.toml
+++ b/test-utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "tests-utils"
+name = "test-utils"
 version = "0.1.0"
 edition = "2018"
 
@@ -8,3 +8,5 @@ casper-contract = { version = "1.4.3", default-features = false, features = ["te
 casper-engine-test-support = { version = "2.0.3", features = ["test-support"] }
 casper-execution-engine = "1.4.4"
 casper-types = "1.4.6"
+base64 = "0.13.0"
+contract-utils = { path = "../contract-utils" }
