Added test_env.expect_error and utils::Error. Enable runtime::print.

--- a/contracts/reputation/Cargo.toml
+++ b/contracts/reputation/Cargo.toml
@@ -20,5 +20,5 @@ codegen-units = 1
 lto = true
 
 [features]
-default = [ "casper-contract/default", "casper-contract/std" ]
-test-support = [ "utils/test-support" ]
+default = [ "casper-contract/default", "casper-contract/std", "casper-contract/test-support" ]
+test-support = [ "utils/test-support", "casper-contract/test-support" ]
