--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -5,6 +5,7 @@ on:
     branches:
       - master
       - develop
+      - feature/*
     paths-ignore:
       - "**.md"
 
@@ -12,6 +13,7 @@ on:
     branches:
       - master
       - develop
+      - feature/*
     paths-ignore:
       - "**.md"
 
