Setup module for Variable Repository Contract

--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 casper-types = "1.4.6"
 casper-dao-contracts = { path = "../contracts", default-features = false, features = [ "test-support" ] }
 casper-dao-utils = { path = "../utils", features = [ "test-support" ]}
+variable-repository = { path = "../contracts/variable", default-features = false, features = [ "test-support" ] }
 
 [[bin]]
 name = "reputation-tests"
@@ -14,3 +15,8 @@ path = "src/reputation_tests.rs"
 bench = false
 doctest = false
 
+[[bin]]
+name = "variable-tests"
+path = "src/variable_tests.rs"
+bench = false
+doctest = false
