--- a/contracts/Cargo.toml
+++ b/contracts/Cargo.toml
@@ -14,6 +14,7 @@ path = "bin/reputation_contract.rs"
 bench = false
 doctest = false
 test = false
+doc = false
 
 [profile.release]
 codegen-units = 1
