--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -12,7 +12,7 @@ syn =  { version = "1.0.86", features = ["full"] }
 trybuild = "1.0"
 casper-contract = "1.4.3"
 casper-types = "1.4.6"
-utils = { path = "../utils" }
+casper-dao-utils = { path = "../utils" }
 
 [[test]]
 name = "tests"
