--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 proc-macro2 = "1.0.33"
 quote = "1.0.15"
 syn =  { version = "1.0.86", features = ["full"] }
+convert_case = "0.5.0"
 
 [dev-dependencies]
 trybuild = "1.0"
