Resolve lint issues

--- a/utils/tests/templates/contract.template
+++ b/utils/tests/templates/contract.template
@@ -1,4 +1,6 @@
 mod contract {
+    #![allow(dead_code)]
+    #![allow(unused_variables)]
     impl ImportantContract {
         pub fn install() {
             casper_dao_utils::casper_env::install_contract(
