updated env example

--- a/client/reputation/.env.js-client.example
+++ b/client/reputation/.env.js-client.example
@@ -1,5 +1,5 @@
-WASM_PATH=/$HOME/your-path/dao-contracts/target/wasm32-unknown-unknown/release/reputation_contract.wasm
-USER_KEY_PAIR_PATH=/$HOME/your-path/casper-node/utils/nctl/assets/net-1/users/user-1
+WASM_PATH=/your-path/dao-contracts/target/wasm32-unknown-unknown/release/reputation_contract.wasm
+USER_KEY_PAIR_PATH=/your-path/casper-node/utils/nctl/assets/net-1/users/user-1
 
 CHAIN_NAME=casper-net-1
 NODE_ADDRESS=http://localhost:11101/rpc
