--- a/.github/workflows/ci-casper-js-client.yml
+++ b/.github/workflows/ci-casper-js-client.yml
@@ -21,7 +21,7 @@ env:
   CHAIN_NAME: casper-net-1
   NODE_ADDRESS: http://localhost:11101/rpc
   EVENT_STREAM_ADDRESS: http://localhost:18101/events/main
-  WASM_PATH: /target/wasm32-unknown-unknown/release/reputation_contract.wasm
+  WASM_PATH: ${{ github.workspace }}/target/wasm32-unknown-unknown/release/reputation_contract.wasm
   INSTALL_PAYMENT_AMOUNT: 200000000000
   DEPLOY_PAYMENT_AMOUNT: 200000000000
   NCTL_USERS_FOLDER_PATH: /tmp/net-1/users
@@ -45,19 +45,37 @@ jobs:
         volumes:
           - /tmp:/home/casper/casper-node/utils/nctl/assets
     steps:
+      - name: Fix keys permission
+        run: sudo chown runner $NCTL_USERS_FOLDER_PATH/*/*
+      
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Prepare Rust
+      
+      - name: Wasm Build Cache
+        id: wasm-cache
+        uses: actions/cache@v1
+        with:
+          path: target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      
+      - name: Build Wasm
+        if: steps.wasm-cache.outputs.cache-hit != 'true'
         uses: actions-rs/toolchain@v1
         with:
           profile: minimal
+      - uses: Swatinem/rust-cache@v1
+        if: steps.wasm-cache.outputs.cache-hit != 'true'
       - run: sudo apt update && sudo apt install -y build-essential && sudo apt-get install wabt
+        if: steps.wasm-cache.outputs.cache-hit != 'true'
       - run: make prepare
+        if: steps.wasm-cache.outputs.cache-hit != 'true'
       - run: make build-contracts
+        if: steps.wasm-cache.outputs.cache-hit != 'true'
+    
       - name: Setup NodeJS
         uses: actions/setup-node@v2
         with:
           node-version: '14'
-      - name: Fix keys permission
-      - run: sudo chown runner $NCTL_USERS_FOLDER_PATH/*/*
-      - run: cd client && npm install && NODE_ENV=ci npm run e2e:reputation
+      
+      - name: E2E Reputation Results
+        run: cd client && npm install && NODE_ENV=ci npm run e2e:reputation
