--- a/.github/workflows/ci-casper-js-client.yml
+++ b/.github/workflows/ci-casper-js-client.yml
@@ -18,13 +18,13 @@ on:
 
 env:
   NODE_ENV: ci
+  WASM_RELEASE_PATH: ${{ github.workspace }}/target/wasm32-unknown-unknown/release
+  NCTL_USERS_FOLDER_PATH: /tmp/net-1/users
   CHAIN_NAME: casper-net-1
   NODE_ADDRESS: http://localhost:11101/rpc
   EVENT_STREAM_ADDRESS: http://localhost:18101/events/main
-  WASM_PATH: ${{ github.workspace }}/target/wasm32-unknown-unknown/release/reputation_contract.wasm
   INSTALL_PAYMENT_AMOUNT: 200000000000
   DEPLOY_PAYMENT_AMOUNT: 200000000000
-  NCTL_USERS_FOLDER_PATH: /tmp/net-1/users
 
 jobs:
   run-e2e:
