--- a/utils/tests/templates/bin.template
+++ b/utils/tests/templates/bin.template
@@ -11,8 +11,10 @@ fn call() {
 }
 #[no_mangle]
 fn init() {
+    let first_arg = casper_contract::contract_api::runtime::get_named_arg("first_arg");
+    let second_arg = casper_contract::contract_api::runtime::get_named_arg("second_arg");
     let mut contract = ImportantContract::default();
-    ImportantContractInterface::init(&mut contract);
+    ImportantContractInterface::init(&mut contract, first_arg, second_arg);
 }
 #[no_mangle]
 fn mint() {
