refactor macro code

--- a/utils/tests/templates/bin.template
+++ b/utils/tests/templates/bin.template
@@ -29,3 +29,8 @@ fn balance_of() {
     let mut contract = ImportantContract::default();
     ImportantContractInterface::balance_of(&mut contract, to);
 }
+#[no_mangle]
+fn argless() {
+    let mut contract = ImportantContract::default();
+    ImportantContractInterface::argless(&mut contract);
+}
