--- a/utils/Cargo.toml
+++ b/utils/Cargo.toml
@@ -14,6 +14,7 @@ casper-execution-engine = { version = "1.4.4", optional = true }
 
 [dev-dependencies]
 trybuild = "1.0"
+pretty_assertions = "1.2.0"
 
 [[test]]
 name = "tests"
