--- a/utils/tests/templates/contract.template
+++ b/utils/tests/templates/contract.template
@@ -72,6 +72,16 @@ mod contract {
                 casper_types::EntryPointAccess::Public,
                 casper_types::EntryPointType::Contract,
             ));
+            entry_points.add_entry_point(casper_types::EntryPoint::new(
+                "argless",
+                {
+                    let mut params: Vec<casper_types::Parameter> = Vec::new();
+                    params
+                },
+                <() as casper_types::CLTyped>::cl_type(),
+                casper_types::EntryPointAccess::Public,
+                casper_types::EntryPointType::Contract,
+            ));
             entry_points
         }
     }
@@ -79,6 +89,7 @@ mod contract {
         fn init(&mut self, first_arg: casper_types::U256, second_arg: casper_types::U256);
         fn mint(&mut self, recipient: casper_dao_utils::Address, amount: casper_types::U256);
         fn balance_of(&mut self, to: casper_dao_utils::Address) -> casper_types::U256;
+        fn argless(&mut self);
     }
     pub struct ImportantContractCaller {
         contract_package_hash: casper_types::ContractPackageHash,
@@ -129,6 +140,14 @@ mod contract {
                 },
             )
         }
+        fn argless(&mut self) {
+            casper_contract::contract_api::runtime::call_versioned_contract(
+                self.contract_package_hash,
+                std::option::Option::None,
+                "argless",
+                casper_types::RuntimeArgs::new(),
+            )
+        }
     }
     #[cfg(feature = "test-support")]
     pub struct ImportantContractTest {
@@ -139,10 +158,7 @@ mod contract {
     #[cfg(feature = "test-support")]
     impl ImportantContractTest {
         pub fn new(env: &casper_dao_utils::TestEnv) -> ImportantContractTest {
-            env.deploy_wasm_file("important_contract.wasm", {
-                let mut named_args = casper_types::RuntimeArgs::new();
-                named_args
-            });
+            env.deploy_wasm_file("important_contract.wasm", casper_types::RuntimeArgs::new());
             let package_hash = env.get_contract_package_hash("important_contract_package_hash");
             ImportantContractTest {
                 env: env.clone(),
@@ -215,6 +231,13 @@ mod contract {
                 });
             casper_types::U256::default()
         }
+        fn argless(&mut self) {
+            self.env.call_contract_package(
+                self.package_hash,
+                "argless",
+                casper_types::RuntimeArgs::new(),
+            );
+        }
     }
     pub struct ImportantContract {}
     #[automatically_derived]
@@ -231,5 +254,6 @@ mod contract {
         fn balance_of(&mut self, to: casper_dao_utils::Address) -> casper_types::U256 {
             casper_types::U256::default()
         }
+        fn argless(&mut self) {}
     }
 }
