--- a/tests/Cargo.toml
+++ b/tests/Cargo.toml
@@ -12,5 +12,5 @@ casper-dao-utils = { path = "../utils", features = [ "test-support" ]}
 
 [[test]]
 name = "integration"
-path = "lib.rs"
+path = "src/lib.rs"
 harness = true
