--- a/dao-macros/Cargo.toml
+++ b/dao-macros/Cargo.toml
@@ -8,6 +8,7 @@ proc-macro2 = "1.0.33"
 quote = "1.0.15"
 syn =  { version = "1.0.86", features = ["full"] }
 convert_case = "0.5.0"
+pretty_assertions = "1.2.0"
 
 [lib]
 proc-macro = true
