--- a/dao-utils/Cargo.toml
+++ b/dao-utils/Cargo.toml
@@ -8,7 +8,7 @@ casper-contract = { version = "1.4.3", default-features = false }
 casper-types = "1.4.6"
 base64 = "0.13.0"
 lazy_static = "1.4.0"
-casper-dao-macros = { path = "../macros" }
+casper-dao-macros = { path = "../dao-macros" }
 casper-engine-test-support = { version = "2.0.3", features = ["test-support"], optional = true }
 casper-execution-engine = { version = "1.4.4", optional = true }
 hex = "0.4.3"
