--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -19,7 +19,6 @@ on:
 jobs:
   build:
     runs-on: ubuntu-20.04
-
     steps:
       - uses: actions/checkout@v2
       - uses: actions-rs/toolchain@v1
@@ -29,4 +28,4 @@ jobs:
       - run: sudo apt update && sudo apt install -y build-essential
       - run: make prepare
       - run: make check-lint
-      - run: make test
+      - run: make github-test
