--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -23,6 +23,13 @@ bench = false
 doctest = false
 test = false
 
+[[bin]]
+name = "repo_voter_contract"
+path = "bin/repo_voter_contract.rs"
+bench = false
+doctest = false
+test = false
+
 [[test]]
 name = "test-reputation"
 path = "tests/test_reputation.rs"
@@ -31,6 +38,11 @@ harness = true
 [[test]]
 name = "test-variable-repository"
 path = "tests/test_variable_repository.rs"
+harness = true
+
+[[test]]
+name = "test-repo-voter"
+path = "tests/test_repo_voter.rs"
 harness = true
 
 [features]
