Move sample-contract and test to dao-macros module
* remove unused ui tests
* update template code
* move module and tests from dao-utils

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
     "dao-utils",
+    "dao-macros/sample-contract",
     "dao-macros",
     "dao-modules",
     "dao-contracts",
