--- a/dao-macros/Cargo.toml
+++ b/dao-macros/Cargo.toml
@@ -10,5 +10,9 @@ syn =  { version = "1.0.86", features = ["full"] }
 convert_case = "0.5.0"
 pretty_assertions = "1.2.0"
 
+[[test]]
+name = "tests"
+path = "tests/expand_tests.rs"
+
 [lib]
 proc-macro = true
