--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -28,4 +28,4 @@ jobs:
       - run: sudo apt update && sudo apt install -y build-essential
       - run: make prepare
       - run: make check-lint
-      - run: make github-test
+      - run: make test
