--- a/.github/workflows/ci-casper-rust-contract.yml
+++ b/.github/workflows/ci-casper-rust-contract.yml
@@ -29,4 +29,4 @@ jobs:
       - run: cargo install cargo-expand
       - run: make prepare
       - run: make check-lint
-      - run: make github-test
+      - run: make test
