erc-721 interface definition

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,8 @@ members = [
     "dao-macros",
     "dao-modules",
     "dao-contracts",
-    "dao-erc20"
+    "dao-erc20",
+    "dao-erc721",
 ]
 
 [profile.release]
