--- a/dao-erc721/Cargo.toml
+++ b/dao-erc721/Cargo.toml
@@ -17,6 +17,22 @@ doctest = false
 test = false
 doc = false
 
+[[bin]]
+name = "erc_721_receiver"
+path = "bin/erc721_receiver_contract.rs"
+bench = false
+doctest = false
+test = false
+doc = false
+
+[[bin]]
+name = "erc_721_non_receiver"
+path = "bin/non_receiver_contract.rs"
+bench = false
+doctest = false
+test = false
+doc = false
+
 [[test]]
 name = "test-erc721"
 path = "tests/test_erc721.rs"
