--- a/dao-erc721/Cargo.toml
+++ b/dao-erc721/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 [dependencies]
 casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
+delegate = "0.6.2"
 
 [[bin]]
 name = "erc_721"
