--- a/dao-erc20/Cargo.toml
+++ b/dao-erc20/Cargo.toml
@@ -1,7 +1,9 @@
+cargo-features = ["edition2021"]
+
 [package]
 name = "casper-dao-erc20"
 version = "0.1.0"
-edition = "2018"
+edition = "2021"
 
 [dependencies]
 casper-types = "1.4.6"
