--- a/dao-macros/Cargo.toml
+++ b/dao-macros/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 [dependencies]
 proc-macro2 = "1.0.33"
 quote = "1.0.15"
-syn =  { version = "1.0.86", features = ["full"] }
+syn =  { version = "1.0.86", features = ["full", "extra-traits"] }
 convert_case = "0.5.0"
 pretty_assertions = "1.2.0"
 
