--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -23,15 +23,19 @@ bench = false
 doctest = false
 test = false
 
-[[test]]
-name = "test-reputation"
-path = "tests/test_reputation.rs"
-harness = true
+[[bin]]
+name = "repo_voter_contract"
+path = "bin/repo_voter_contract.rs"
+bench = false
+doctest = false
+test = false
 
-[[test]]
-name = "test-variable-repository"
-path = "tests/test_variable_repository.rs"
-harness = true
+[[bin]]
+name = "mock_voter_contract"
+path = "bin/mocks/mock_voter_contract.rs"
+bench = false
+doctest = false
+test = false
 
 [features]
 default = [ "test-support" ]
