--- a/dao-macros/tests/templates/contract.template
+++ b/dao-macros/tests/templates/contract.template
@@ -8,7 +8,9 @@ mod contract {
                 "important_contract_package_hash",
                 ImportantContract::entry_points(),
                 |contract_package_hash| {
-                    let mut contract_instance = ImportantContractCaller::at(contract_package_hash);
+                    let mut contract_instance = ImportantContractCaller::at(
+                        casper_dao_utils::Address::from(contract_package_hash),
+                    );
                     let first_arg =
                         casper_dao_utils::casper_contract::contract_api::runtime::get_named_arg(
                             "first_arg",
@@ -100,9 +102,9 @@ mod contract {
         contract_package_hash: casper_types::ContractPackageHash,
     }
     impl ImportantContractCaller {
-        pub fn at(contract_package_hash: casper_types::ContractPackageHash) -> Self {
+        pub fn at(address: casper_dao_utils::Address) -> Self {
             Self {
-                contract_package_hash,
+                contract_package_hash: *address.as_contract_package_hash().unwrap(),
             }
         }
     }
@@ -184,6 +186,9 @@ mod contract {
         pub fn get_package_hash(&self) -> casper_types::ContractPackageHash {
             self.package_hash
         }
+        pub fn address(&self) -> casper_dao_utils::Address {
+            casper_dao_utils::Address::from(self.package_hash)
+        }
         pub fn as_account(&mut self, account: casper_dao_utils::Address) -> &mut Self {
             self.env.as_account(account);
             self
@@ -202,11 +207,40 @@ mod contract {
             T: casper_types::bytesrepr::FromBytes + std::cmp::PartialEq + std::fmt::Debug,
         >(
             &self,
-            index: u32,
+            index: i32,
             event: T,
         ) {
+            let length: u32 = self.env.get_value(self.package_hash, "events_length");
+            let index: u32 = if index.is_negative() {
+                length - index.wrapping_abs() as u32
+            } else {
+                index as u32
+            };
             {
                 match (&self.event::<T>(index), &event) {
+                    (left_val, right_val) => {
+                        if !(*left_val == *right_val) {
+                            let kind = ::core::panicking::AssertKind::Eq;
+                            ::core::panicking::assert_failed(
+                                kind,
+                                &*left_val,
+                                &*right_val,
+                                ::core::option::Option::None,
+                            );
+                        }
+                    }
+                }
+            };
+        }
+        pub fn assert_last_event<
+            T: casper_types::bytesrepr::FromBytes + std::cmp::PartialEq + std::fmt::Debug,
+        >(
+            &self,
+            event: T,
+        ) {
+            let length: u32 = self.env.get_value(self.package_hash, "events_length");
+            {
+                match (&self.event::<T>(length - 1), &event) {
                     (left_val, right_val) => {
                         if !(*left_val == *right_val) {
                             let kind = ::core::panicking::AssertKind::Eq;
