Admin Contract WIP: Tests refactor using speculate

--- a/dao-contracts/Cargo.toml
+++ b/dao-contracts/Cargo.toml
@@ -8,6 +8,9 @@ casper-types = "1.4.6"
 casper-dao-utils = { path = "../dao-utils", default-features = false }
 casper-dao-modules = { path = "../dao-modules", default-features = false }
 
+[dev-dependencies]
+speculate = "0.1.2"
+
 [[bin]]
 name = "reputation_contract"
 path = "bin/reputation_contract.rs"
@@ -26,6 +29,13 @@ test = false
 [[bin]]
 name = "repo_voter_contract"
 path = "bin/repo_voter_contract.rs"
+bench = false
+doctest = false
+test = false
+
+[[bin]]
+name = "admin_contract"
+path = "bin/admin_contract.rs"
 bench = false
 doctest = false
 test = false
