Add missing tests, remove the old ones

--- a/dao-erc721/Cargo.toml
+++ b/dao-erc721/Cargo.toml
@@ -11,6 +11,7 @@ casper-dao-utils = { path = "../dao-utils", default-features = false }
 delegate = "0.6.2"
 [dev-dependencies]
 speculate = "0.1.2"
+test-case = "2.0.2"
 
 [[bin]]
 name = "erc_721"
@@ -35,16 +36,6 @@ bench = false
 doctest = false
 test = false
 doc = false
-
-[[test]]
-name = "test-erc721"
-path = "tests/test_erc721.rs"
-harness = true
-
-[[test]]
-name = "test-erc721-spec"
-path = "tests/test_erc721_spec.rs"
-harness = true
 
 [features]
 default = [ "test-support" ]
